# restic-helpers

./: .envrc.example  .gitignore  .goreleaser.yaml  LICENSE  README.md  core.exclude.txt  go.mod  go.sum  install.sh  pyproject.toml  uninstall.sh
.github/workflows/: release.yaml
cmd/restic-helpers/: main.go
examples/config/: config.toml  secret.toml
internal/assets/: assets.go
internal/assets/example/: config.toml  env.sh  secret.toml
internal/assets/example/repo/: exclude.txt  healthcheck.txt  name.txt  paths.txt
internal/cli/: backup.go  check.go  init.go  root.go  schedule.go  unschedule.go  use.go
internal/config/: config.go  config_test.go
internal/cron/: cron.go  cron_test.go
internal/launchd/: launchd.go
internal/notify/: notify.go
internal/retry/: retry.go
repos/core/: exclude.txt
restic_helpers/: __init__.py  cli.py  config.py  cron.py  launchd.py  notify.py
tests/: test_config.py  test_cron.py
