[project]
dependencies = [
  "click",
  "requests",
  "croniter",
  "pydantic",
  "tenacity",
]
name = "restic-helpers"
requires-python = ">=3.11"
version = "0.1.0"

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
]

[project.scripts]
restic-helpers = "restic_helpers.cli:main"

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0"]
